--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'org.example'
@@ -8,6 +9,12 @@ version '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
+mainClassName = 'App'
+
+sourceCompatibility = '1.8'
+
+applicationName='wildlife-glen'
+
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
